[tool.poetry]
name = "website"
version = "0.1.0"
description = "Source code of the MONARC website."
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.2.0"
Markdown = "^3.2.2"
typogrify = "^2.0.7"
xhtml2pdf = "^0.2.4"
ghp-import = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
